Create Showcase & Home Info.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,32 @@
         </ul>
       </div>
     </nav>
+
+    <div id="showcase">
+      <div class="container">
+        <div class="showcase-content">
+          <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
+          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga odit consectetur quam laborum
+            fugiat impedit?</p>
+          <a class="btn" href="about.html">About Our Hotel</a>
+        </div>
+      </div>
+    </div>
   </header>
+
+  <section id="home-info" class="bg-dark">
+    <div class="info-img">
+
+    </div>
+    <div class="info-content">
+      <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, at. Corrupti mollitia cum consectetur eos
+        at, reprehenderit quam odio cumque beatae dolore suscipit quia, atque sequi esse saepe unde? Reprehenderit
+        praesentium cupiditate totam nisi neque quos nihil consectetur, blanditiis inventore exercitationem.
+        Perspiciatis et recusandae ea odit eligendi fugit provident eum.</p>
+      <a href="about.html" class="btn btn-light">Read More</a>
+    </div>
+  </section>
 </body>
 
 </html>
