--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston Massachusetts">
   <meta name="keywords" content="hotel,boston hotel,new england hotel">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Hotel BT | Welcome</title>
 </head>
@@ -48,6 +49,30 @@
         Perspiciatis et recusandae ea odit eligendi fugit provident eum.</p>
       <a href="about.html" class="btn btn-light">Read More</a>
     </div>
+  </section>
+
+  <section id="features">
+    <div class="box bg-light">
+      <i class="fas fa-hotel fa-3x"></i>
+      <h3>Great Location</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, praesentium.</p>
+    </div>
+    <div class="box bg-primary">
+      <i class="fas fa-utensils fa-3x"></i>
+      <h3>Free Meals</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, suscipit.</p>
+    </div>
+    <div class="box bg-light">
+      <i class="fas fa-dumbbell fa-3x"></i>
+      <h3>Fitness Room</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, maiores?</p>
+    </div>
+  </section>
+
+  <div class="clr"></div>
+  
+  <section id="main-footer">
+    <p>Hotel BT &copy; 2019, All Rights Reserved</p>
   </section>
 </body>
 
