--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston Massachusetts">
   <meta name="keywords" content="hotel,boston hotel,new england hotel">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
   <title>Hotel BT | About</title>
 </head>
 
@@ -29,15 +30,20 @@
     <div class="container">
       <div class="info-left">
         <h1 class="l-heading"><span class="text-primary">About</span> Hotel BT</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime mollitia, voluptas, voluptatibus doloribus animi natus error consequatur molestias suscipit amet culpa quae nemo aliquid aliquam eligendi similique tenetur, facere officiis voluptatem illo. At beatae inventore dolorem obcaecati doloribus possimus explicabo?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi sunt saepe quas possimus minima facilis quod quidem libero natus officia officiis eos nesciunt necessitatibus, nam veritatis vero sint quaerat.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime mollitia, voluptas, voluptatibus doloribus
+          animi natus error consequatur molestias suscipit amet culpa quae nemo aliquid aliquam eligendi similique
+          tenetur, facere officiis voluptatem illo. At beatae inventore dolorem obcaecati doloribus possimus explicabo?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sequi sunt saepe quas possimus minima
+          facilis quod quidem libero natus officia officiis eos nesciunt necessitatibus, nam veritatis vero sint
+          quaerat.</p>
       </div>
       <div class="info-right">
         <img src="img/photo-2.jpg" alt="hotel">
       </div>
     </div>
   </section>
-  
+
   <div class="clr"></div>
 
   <section id="testimonials" class="py-3">
@@ -45,12 +51,16 @@
       <h2 class="l-heading">What Our Guests Say</h2>
       <div class="testimonial bg-primary">
         <img src="img/person-1.jpg" alt="Samantha">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit quasi nihil atque nulla illum temporibus dolorem inventore distinctio praesentium ad. Saepe alias architecto voluptatum beatae deserunt veniam quis quidem iure, corrupti natus explicabo quisquam voluptate asperiores commodi ipsam aspernatur expedita!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odit quasi nihil atque nulla illum temporibus
+          dolorem inventore distinctio praesentium ad. Saepe alias architecto voluptatum beatae deserunt veniam quis
+          quidem iure, corrupti natus explicabo quisquam voluptate asperiores commodi ipsam aspernatur expedita!</p>
       </div>
 
       <div class="testimonial bg-primary">
         <img src="img/person-2.jpg" alt="Jen">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet ex vero totam numquam expedita adipisci eos debitis optio facere consequatur fugiat voluptas voluptatibus, officia dolorum quasi similique nostrum ut veniam labore et sit. Mollitia explicabo doloribus molestiae aliquid. Nemo?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus eveniet ex vero totam numquam expedita
+          adipisci eos debitis optio facere consequatur fugiat voluptas voluptatibus, officia dolorum quasi similique
+          nostrum ut veniam labore et sit. Mollitia explicabo doloribus molestiae aliquid. Nemo?</p>
       </div>
     </div>
   </section>
