--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="keywords" content="hotel,boston hotel,new england hotel">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="css/mobile.css">
   <title>Hotel BT | Welcome</title>
 </head>
 
@@ -70,7 +71,7 @@
   </section>
 
   <div class="clr"></div>
-  
+
   <section id="main-footer">
     <p>Hotel BT &copy; 2019, All Rights Reserved</p>
   </section>
