Fix semantic (section->footer).

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
   </header>
 
   <section id="home-info" class="bg-dark">
-    <div class="info-img">
-
-    </div>
+    <div class="info-img"></div>
     <div class="info-content">
       <h2><span class="text-primary">The History</span> Of Our Hotel</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, at. Corrupti mollitia cum consectetur eos
@@ -72,9 +70,9 @@
 
   <div class="clr"></div>
 
-  <section id="main-footer">
+  <footer id="main-footer">
     <p>Hotel BT &copy; 2019, All Rights Reserved</p>
-  </section>
+  </footer>
 </body>
 
 </html>
