--- a/about.html
+++ b/about.html
@@ -65,9 +65,9 @@
     </div>
   </section>
 
-  <section id="main-footer">
+  <footer id="main-footer">
     <p>Hotel BT &copy; 2019, All Rights Reserved</p>
-  </section>
+  </footer>
 </body>
 
 </html>
