--- a/contact.html
+++ b/contact.html
@@ -69,9 +69,9 @@
     </div>
   </section>
 
-  <section id="main-footer">
+  <footer id="main-footer">
     <p>Hotel BT &copy; 2019, All Rights Reserved</p>
-  </section>
+  </footer>
 </body>
 
 </html>
